add annotation to customer name

--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -190,6 +190,10 @@
     <Compile Include="Migrations\201709161055114_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>201709161055114_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709162339580_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201709162339580_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201709162339580_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -284,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709161055114_PopulateMembershipTypes.resx">
       <DependentUpon>201709161055114_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709162339580_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201709162339580_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
