--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -195,6 +195,10 @@
     <Compile Include="Migrations\201709162339580_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201709162339580_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709180101031_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201709180101031_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201709180101031_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -295,6 +299,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709162339580_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201709162339580_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709180101031_AddNameToMembershipType.resx">
+      <DependentUpon>201709180101031_AddNameToMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
