add nullable BirthDate to Customer

--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\201709180101031_AddNameToMembershipType.Designer.cs">
       <DependentUpon>201709180101031_AddNameToMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709180109429_AddBirthDateToCustomer.cs" />
+    <Compile Include="Migrations\201709180109429_AddBirthDateToCustomer.Designer.cs">
+      <DependentUpon>201709180109429_AddBirthDateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -302,6 +306,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709180101031_AddNameToMembershipType.resx">
       <DependentUpon>201709180101031_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709180109429_AddBirthDateToCustomer.resx">
+      <DependentUpon>201709180109429_AddBirthDateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
