--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -203,9 +203,14 @@
     <Compile Include="Migrations\201709180109429_AddBirthDateToCustomer.Designer.cs">
       <DependentUpon>201709180109429_AddBirthDateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709180130447_AddGenreTable.cs" />
+    <Compile Include="Migrations\201709180130447_AddGenreTable.Designer.cs">
+      <DependentUpon>201709180130447_AddGenreTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -309,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709180109429_AddBirthDateToCustomer.resx">
       <DependentUpon>201709180109429_AddBirthDateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709180130447_AddGenreTable.resx">
+      <DependentUpon>201709180130447_AddGenreTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
