--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\201709180130447_AddGenreTable.Designer.cs">
       <DependentUpon>201709180130447_AddGenreTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709180143456_AddMovieTable.cs" />
+    <Compile Include="Migrations\201709180143456_AddMovieTable.Designer.cs">
+      <DependentUpon>201709180143456_AddMovieTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -281,6 +285,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -317,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709180130447_AddGenreTable.resx">
       <DependentUpon>201709180130447_AddGenreTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709180143456_AddMovieTable.resx">
+      <DependentUpon>201709180143456_AddMovieTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
