--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201709180143456_AddMovieTable.Designer.cs">
       <DependentUpon>201709180143456_AddMovieTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709180617332_AddMembershipTypesTable.cs" />
+    <Compile Include="Migrations\201709180617332_AddMembershipTypesTable.Designer.cs">
+      <DependentUpon>201709180617332_AddMembershipTypesTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -327,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709180143456_AddMovieTable.resx">
       <DependentUpon>201709180143456_AddMovieTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709180617332_AddMembershipTypesTable.resx">
+      <DependentUpon>201709180617332_AddMembershipTypesTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
