--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201709181154319_ChangeMembershipTypeTable.Designer.cs">
       <DependentUpon>201709181154319_ChangeMembershipTypeTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709181302164_SomeChangesInMovieTable.cs" />
+    <Compile Include="Migrations\201709181302164_SomeChangesInMovieTable.Designer.cs">
+      <DependentUpon>201709181302164_SomeChangesInMovieTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -228,6 +232,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -297,6 +302,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\New.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -342,6 +348,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709181154319_ChangeMembershipTypeTable.resx">
       <DependentUpon>201709181154319_ChangeMembershipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709181302164_SomeChangesInMovieTable.resx">
+      <DependentUpon>201709181302164_SomeChangesInMovieTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
