--- a/MovieStore/bin/.gitignore
+++ b/MovieStore/bin/.gitignore
@@ -1,2 +1,8 @@
 /Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
 /Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+/System.Net.Http.Formatting.dll
+/System.Net.Http.Formatting.xml
+/System.Web.Http.WebHost.dll
+/System.Web.Http.WebHost.xml
+/System.Web.Http.dll
+/System.Web.Http.xml
