--- a/MovieStore/bin/.gitignore
+++ b/MovieStore/bin/.gitignore
@@ -1,2 +1,4 @@
 /Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
 /Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+/AutoMapper.dll
+/AutoMapper.xml
