--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -247,6 +247,10 @@
     <Compile Include="Migrations\201709181302164_SomeChangesInMovieTable.Designer.cs">
       <DependentUpon>201709181302164_SomeChangesInMovieTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709200621147_SeedUsers.cs" />
+    <Compile Include="Migrations\201709200621147_SeedUsers.Designer.cs">
+      <DependentUpon>201709200621147_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -550,6 +554,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709181302164_SomeChangesInMovieTable.resx">
       <DependentUpon>201709181302164_SomeChangesInMovieTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709200621147_SeedUsers.resx">
+      <DependentUpon>201709200621147_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
