add a new property to ApplicationUser

--- a/MovieStore/MovieStore.csproj
+++ b/MovieStore/MovieStore.csproj
@@ -251,6 +251,10 @@
     <Compile Include="Migrations\201709200621147_SeedUsers.Designer.cs">
       <DependentUpon>201709200621147_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709200757343_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201709200757343_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201709200757343_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -559,6 +563,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709200621147_SeedUsers.resx">
       <DependentUpon>201709200621147_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709200757343_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201709200757343_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
