--- a/MovieStore/Web.config
+++ b/MovieStore/Web.config
@@ -20,10 +20,12 @@
   <system.web>
     <sessionState mode="Off"></sessionState>
     <authentication mode="None" />
+    <!--把debug设置为false的时候，client的请求次数会优化，默认是false-->
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+    <httpModules>
             <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
         </httpModules><httpHandlers>
             <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
