--- a/MovieStore/Web.config
+++ b/MovieStore/Web.config
@@ -20,7 +20,7 @@
   <system.web>
     <sessionState mode="Off"></sessionState>
     <authentication mode="None" />
-    <!--把debug设置为false的时候，client的请求次数会优化，默认是false-->
+    <!--把debug设置为false的时候，client的请求次数会优化，Debug默认是false-->
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
